test/corpus/citations-basic.txt
==================
Citations basic
==================

# USER

When was Claude Shannon born?

# SERVER TOOL USE

Name: web_search
ID: srvtoolu_01WYG3ziw53XMcoyKL4XcZmE

## query

<tool.srvtoolu_01WYG3ziw53XMcoyKL4XcZmE>
claude shannon birth date
</tool.srvtoolu_01WYG3ziw53XMcoyKL4XcZmE>

# WEB SEARCH TOOL RESULT

ID: srvtoolu_01WYG3ziw53XMcoyKL4XcZmE

<tool.srvtoolu_01WYG3ziw53XMcoyKL4XcZmE>
[
  {
    "type": "web_search_result",
    "url": "https://en.wikipedia.org/wiki/Claude_Shannon",
    "title": "Claude Shannon - Wikipedia",
    "encrypted_content": "EqgfCioIARgBIiQ3YTAwMjY1Mi1mZjM5LTQ1NGUtODgxNC1kNjNjNTk1ZWI3Y...",
    "page_age": "April 30, 2025"
  }
]
</tool.srvtoolu_01WYG3ziw53XMcoyKL4XcZmE>

# ASSISTANT

Based on the search results,

# ASSISTANT

Claude Shannon was born on April 30, 1916, in Petoskey, Michigan

## https://en.wikipedia.org/wiki/Claude_Shannon

Title: Claude Shannon - Wikipedia
Cited text: Claude Elwood Shannon (April 30, 1916 – February 24, 2001) was an American mathematician, electrical engineer, computer scientist, cryptographer and i...
Encrypted index: Eo8BCioIAhgBIiQyYjQ0OWJmZi1lNm..

---

(source_file
  (user
    (user_header)
    (text))
  (server_tool_use
    (server_tool_use_header)
    (name
      (key)
      (value))
    (id
      (key)
      (value))
    (tool_param
      (tool_param_header
        (name))
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag))))
  (web_search_tool_result
    (web_search_tool_result_header)
    (id
      (key)
      (value))
    (content
      (tool_start_tag)
      (tool_content
        (tool_content_head)
        (tool_content_tail))
      (tool_end_tag)))
  (assistant
    (assistant_header)
    (text))
  (assistant
    (assistant_header)
    (text)
    (citation_entry
      (url)
      (title
        (key)
        (value))
      (cited_text
        (key)
        (value))
      (encrypted_index
        (key)
        (value)))))
