test/corpus/complex-workflow.txt
==================
Complex workflow
==================

## USER:

who's the current king of sweden?

## THINKING:

The user is asking about the current king of Sweden. This is a factual question that I can search for to get the most up-to-date information. I'll use the search function to find this information.

## TOOL USE:

Name: search-286d2fd3
ID: toolu_01Kf8avk1cBqH5ZHoXL92Duc

### query

<tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>
current king of Sweden 2024
</tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>

### include_answer

<tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>
basic
</tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>

### max_results

<tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>
3
</tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>

## TOOL RESULT:

ID: toolu_01Kf8avk1cBqH5ZHoXL92Duc

<tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>
{"query": "current king of Sweden 2024", "answer": "Carl XVI Gustaf", "response_time": 2.38}
</tool.toolu_01Kf8avk1cBqH5ZHoXL92Duc>

## ASSISTANT:

The current King of Sweden is **Carl XVI Gustaf**. He has been reigning since 1973 and is the longest-reigning monarch in Swedish history.

---

(source_file
  (user
    (text))
  (thinking
    (text))
  (tool_use
    (name
      (value))
    (id
      (value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag)))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag)))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content)
        (tool_end_tag))))
  (tool_result
    (id
      (value))
    (content
      (tool_start_tag)
      (tool_content)
      (tool_end_tag)))
  (assistant
    (text)))
