test/corpus/include.txt
=======
Include
=======

## USER:

Hello, how are you?

<include>https://example.com</include>

test

<include code>foo.txt</include>

test

---

(source_file
  (user
    (user_header)
    (text)
    (include)
    (text)
    (include_code)
    (text)))
