test/corpus/less-than-greater-than.txt
======================
Less than/greater than
======================

# USER

1 + 1 < 5

# ASSISTANT

Yes.

# USER

1 + 1 > 0

---

(source_file
  (user
    (user_header)
    (text))
  (assistant
    (assistant_header)
    (text))
  (user
    (user_header)
    (text)))
