test/corpus/nested-code-blocks.txt
=====================
Nested code blocks
=====================

## USER:

How do I use backticks in markdown?

## ASSISTANT:

You can use triple backticks:

```
Here's how to show `inline code` in a code block:
Use single backticks around `your code`.
```

Does that help?

---

(source_file
  (user
    (text))
  (assistant
    (text)
    (code_block)
    (text)))
