test/corpus/system-and-user.txt
==================
System and user
==================

# SYSTEM

You are a helpful assistant.

# USER

What's the weather like?

---

(source_file
  (system
    (system_header)
    (text))
  (user
    (user_header)
    (text)))
