test/corpus/text-with-markdown-headings.txt
===========================
Text with markdown headings
===========================

# USER

Hello, how are you?

## This is not a Greger heading

test

# Another heading that should be part of text

---

(source_file
  (user
    (user_header)
    (text)))
