test/corpus/thinking-only.txt
===============
Thinking only
===============

## USER:

Let me think about this

## THINKING:

I need to consider all the options carefully before responding.

---

(source_file
  (user
    (user_header)
    (text))
  (thinking
    (thinking_header)
    (text)))
