test/corpus/thinking-section.txt
==================
Thinking section
==================

## USER:

What's 2+2?

## THINKING:

This is a simple arithmetic question. I can answer this directly without needing any tools.

## ASSISTANT:

2 + 2 = 4

---

(source_file
  (user
    (user_header)
    (text))
  (thinking
    (thinking_header)
    (text))
  (assistant
    (assistant_header)
    (text)))
