test/corpus/tool-use-with-tool-use-in-params.txt
==================================
Tool use with tool use in params
==================================

## USER:

Write some Python code

## TOOL USE:

Name: write-file
ID: toolu_999

### filename

<tool.toolu_999>
example.py
</tool.toolu_999>

### content

<tool.toolu_999>
foo
<tool.toolu_123>
bar
</tool.toolu_123>
</tool.toolu_999>

## TOOL RESULT:

ID: toolu_999

<tool.toolu_999>
File written successfully
</tool.toolu_999>

## ASSISTANT:

I've written the Python file.

---

(source_file
  (user
    (user_header)
    (text))
  (tool_use
    (tool_use_header)
    (name
      (value))
    (id
      (value))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag)))
    (tool_param
      (name)
      (value
        (tool_start_tag)
        (tool_content
          (tool_content_head))
        (tool_end_tag))))
  (tool_result
    (tool_result_header)
    (id
      (value))
    (content
      (tool_start_tag)
      (tool_content
        (tool_content_head))
      (tool_end_tag)))
  (assistant
    (assistant_header)
    (text)))
