test/corpus/triple-hash.txt
===========================
Triple hash not in citation
===========================

# ASSISTANT

Hello, how are you?

## Heading

This is not a citation

This
is not
a
citation
at
all

---

(source_file
  (assistant
    (assistant_header)
    (text)))
