test/corpus/untagged-content.txt
================
Untagged content
================

Hello, this is untagged content

more untagged content

# ASSISTANT

I understand you have untagged content.

---

(source_file
  (untagged_text)
  (assistant
    (assistant_header)
    (text)))
