test/corpus/xml-tags-backticks.txt
=================
Tags in backticks
=================

# USER

Here's some code:

```
<eval>This should not be parsed</eval>
<!-- neither should this -->
<foo>nor this</foo>
```

What do you think? `test <no-parse>no!</no-parse>`

---

(source_file
  (user
    (user_header)
    (text)
    (code_block
      (code_block_content))
    (text)
    (inline_code)
    (text)))
